--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -1,9 +1,10 @@
 {
-  "country": "us",
   "appSourceCopMandatoryAffixes": [
-    "<affix>"
+    "hw_",
+    "cus"
   ],
-  "appFolders": [],
+  "bcptTestFolders": [],
+  "country": "us",
   "testFolders": [],
-  "bcptTestFolders": []
+  "appFolders": []
 }
